# CNAttack

./: LICENSE  README.md  example_CNAttack.py  pyproject.toml  requirements.txt
CNAttack/: filter_zscores.py  format_CNVs.py  hmm_for_CNAs.py  plot_cluster.py  smooth_profiles.py  zscores_compute.py
Data/: Task2A_Dataset  Task4_Genes_Data.csv
Examples/: Example1.py
Notebooks/: Task1.ipynb  Task2A_CNAttack.html  Task2A_CNAttack.ipynb  Task2A_InferCNV.html  Task2A_InferCNV.ipynb  Task2B_CNAttack.ipynb  Task2B_InferCNV.ipynb  Task2B_InferCNV_Output.ipynb  Task3Paper1.ipynb  Task3_Paper1.ipynb  Task3_Paper2.ipynb  Task3_Paper3.ipynb  Task4.ipynb  Task_1.ipynb  Task_4.ipynb
src/our_package_name/:  inferCNV_output_for_simulated data   CNAttack_functions.py  CNAttack_on_Simulated_Data.ipynb  Fixed CNV functions  Simulation_of_CNVs_and_Benchmarking_with_InferCNV.ipynb  __init__.py  final_project_functions.py  final_project_functions_only.py  fixed_cnv_functions.py  paper1_paper2_preprocessing_preliminary.ipynb
tests/: Task_2A_CNAttack.ipynb  Task_2A_InferCNV.ipynb  task_2a_CNAttack  task_2a_final_project (1).py  task_2a_final_project.py  task_2a_infercnv.py
