[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "group6-cscb"
version = "0.0.1"
authors = [
  { name="Peyton Krajcarski", email="pkrajca1@jh.edu" },
]
description = "A novel approach for copy number alteration (CNA) detection using ___"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage =
Issues =
